# card_game

./: .gitignore  Advanced.txt  Cargo.toml  Fix.txt  Level 1 Alpha.txt  Level 2 Alpha.txt  Level 3 Alpha.txt  New.txt  Test.txt  cards.json  pyproject.toml  test.py
cards/: Alpha 2.txt  Alpha 4.txt  Alpha 5.txt  Alpha 6.txt  Basic.txt  Beta 1.txt  Beta 2 Fix.txt  Beta 3.txt  Beta 4.txt  Change.txt  Changed.txt  Current.txt  New.txt  Release Cards.txt  Test.txt  Unchanged.txt  Work.txt  fix.txt  test.txt
commanders/: Alpha 6  Alpha 6 Commanders.txt  Beta 1 Commanders.txt  Beta 3 Commanders.txt  Beta 4 Commanders.txt  Fix.txt  Release Commanders.txt
old/: Alpha 4.txt  Dev.txt  New.txt  test.txt
other/: Alpha 1.txt  Alpha 3.txt  Alpha 4.txt  Alpha 5.txt  Alpha 6 Commanders.txt  Alpha 6.txt  Beta 1 Commanders.txt  Beta 1.txt  Beta 2 Commanders.txt  Beta 2.txt  Beta 3 Commanders.txt  Beta 3.txt  Beta 4 Commanders.txt  Beta 4.txt  Beta 5 Commanders.txt  Beta 5.txt  Beta 6 Commanders.txt  Changed.txt  Dev.txt  Fix.txt  Release Cards.txt  Release Commanders.txt  Test.txt  Work.txt  home.txt  temp.txt  test.txt  work.txt
ref/: Lightning Mage.xcf  superior firepower.xcf
serialize/: Advanced.txt  Basic.txt
serialize_0_2_0/: Test copy.txt  Test.txt
serialize_0_2_0 copy/: Test copy.txt
src/: lib.rs  pdf.rs  serialize.rs  serialize_0_2_0.rs  to_pdf.rs
