[package]
name = "card_game"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "auto-initialize"] }
extrust = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
genpdf = { version = "0.2.0", features = ["images"] }
anyhow = "1.0.53"