[package]
name = "card_game"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "auto-initialize"] }
extstd = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.53"
png = "0.17.7"
crossbeam = "0.8.2"
divrem = "1.0.0"
split-iter = "0.1.0"